tests/ui/coercion/coerce-block-tail-83850.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-block-tail-83850.rs:5:7
   |
LL |     f(&Box::new([1, 2]));
   |     - ^^^^^^^^^^^^^^^^^ expected `&[i32]`, found `&Box<[{integer}; 2]>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[i32]`
              found reference `&Box<[{integer}; 2]>`
note: function defined here
  --> $DIR/coerce-block-tail-83850.rs:2:4
   |
LL | fn f(_: &[i32]) {}
   |    ^ ---------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
