tests/ui/coercion/coerce-block-tail-83850.rs
//@ check-fail
fn f(_: &[i32]) {}

fn main() {
    f(&Box::new([1, 2]));
    //~^ ERROR mismatched types
}
